Utworzono za pomocą Colaboratory

--- a/Advent_of_Code_2020_day_1.ipynb
+++ b/Advent_of_Code_2020_day_1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1IlqjnsNB4ObyrbppMdt3iVGTtSYpNJ9d",
-      "authorship_tag": "ABX9TyP+42/wsoa8rWRcCG3XiQmN",
+      "authorship_tag": "ABX9TyO9hbTAuIh27dY+FStsUiBc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ao0zivVbzuXf",
-        "outputId": "81ae1deb-2ab4-4fda-9ac8-0b53c79e1f35"
+        "outputId": "4a992a2a-a60e-467e-c887-dafe28cc1c87"
       },
       "source": [
         "a=b=0\n",
@@ -65,12 +65,10 @@
         "  for i in file:\n",
         "    with open('/content/drive/My Drive/Colab Notebooks/Advent of Code 2020/adventofcode_1_1.txt', 'r') as file:\n",
         "      for j in file:\n",
-        "        a = int(i.strip())\n",
-        "        b = int(j.strip())\n",
-        "        if a + b == 2020:\n",
-        "          print(a* b)"
+        "        if int(i) + int(j) == 2020:\n",
+        "          print(int(i) * int(j))"
       ],
-      "execution_count": 222,
+      "execution_count": 228,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +87,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qMj59hMHALCA",
-        "outputId": "fda61419-9fff-4818-8d44-a1e20ed60a1c"
+        "outputId": "774be7c4-72aa-44a2-bf62-5f0e3d60ea94"
       },
       "source": [
         "a=b=0\n",
@@ -99,13 +97,10 @@
         "      for j in file:\n",
         "        with open('/content/drive/My Drive/Colab Notebooks/Advent of Code 2020/adventofcode_1_1.txt', 'r') as file:\n",
         "          for k in file:\n",
-        "            a = int(i.strip())\n",
-        "            b = int(j.strip())\n",
-        "            c = int(k.strip())\n",
-        "            if a + b + c == 2020:\n",
-        "              print(a * b * c)"
+        "            if int(i) + int(j) + int(k) == 2020:\n",
+        "              print(int(i) * int(j) * int(k))"
       ],
-      "execution_count": 223,
+      "execution_count": 229,
       "outputs": [
         {
           "output_type": "stream",
