Utworzono za pomocą Colaboratory

--- a/Advent_of_Code_2020_day_2.ipynb
+++ b/Advent_of_Code_2020_day_2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1gkehYOChdHQkSQOgVIpybm386jV6sKI3",
-      "authorship_tag": "ABX9TyMCjJjnNjhWkf2GK+s7G2ke",
+      "authorship_tag": "ABX9TyNsNGHr/+qrMfBpq/ADBOXM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,6 +53,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "hwF_91pvCPbg"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -85,6 +96,52 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IhojrGg9CtMV",
+        "outputId": "7dc235d2-f8c9-4c5f-a826-2877aef005eb"
+      },
+      "source": [
+        "count = 0\n",
+        "with open('/content/drive/My Drive/Colab Notebooks/Advent of Code 2020/adventofcode_2_1.txt', 'r') as file:\n",
+        "  for i in file:\n",
+        "    rule = i.split(':')[0]\n",
+        "    password = i.split(':')[1]\n",
+        "    first = int((i.split(':')[0]).split('-')[0])\n",
+        "    second = int(((i.split(':')[0]).split('-')[1]).split(' ')[0])\n",
+        "    letter = ((i.split(':')[0]).split('-')[1]).split(' ')[1]\n",
+        "    if ((password[first]) == letter and (password[second]) != letter) or ((password[first]) != letter and (password[second]) == letter):\n",
+        "      count += 1\n",
+        "    else: \n",
+        "      pass\n",
+        "print(count)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "360\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C5JuuTG-EsA1"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
